--- a/GiftForGood/package.json
+++ b/GiftForGood/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "connect-flash": "^0.1.1",
     "connect-redis": "^3.4.1",
     "cookie-parser": "^1.4.4",
