--- a/GiftForGood/package.json
+++ b/GiftForGood/package.json
@@ -14,6 +14,7 @@
   "author": "CSTAR",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.1.0",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "connect-flash": "^0.1.1",
